--- a/sub/heroku/colors.html
+++ b/sub/heroku/colors.html
@@ -21,5 +21,7 @@
 
     <body>
         <h1>The color is ...</h1>
+
+        <p><a href="https://github.com/mjumbewu/tropo_colors">(see the code...)</a></p>
     </body>
 </html>
