--- a/sub/heroku/colors.html
+++ b/sub/heroku/colors.html
@@ -22,6 +22,7 @@
     <body>
         <h1>The color is ...</h1>
 
+        <p>Call (415)889-8683 to change the color.</p>
         <p><a href="https://github.com/mjumbewu/tropo_colors">(see the code...)</a></p>
     </body>
 </html>
